implements GoWriter write method
(cherry picked from commit 176dcde0573fb61e640c537f69bb5317fef6e05d)